--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "dependencies": {
     "express": "^4.11.2",
     "express-handlebars": "^1.1.0",
+    "flux": "^2.0.1",
     "jade": "^1.9.1",
     "mongoose": "^3.8.22",
     "node-jsx": "^0.12.4",
     "ntwitter": "^0.5.0",
+    "object-assign": "^2.0.0",
     "react": "^0.12.2",
     "socket.io": "^1.3.3"
   },
