--- a/package.json
+++ b/package.json
@@ -1,38 +1,22 @@
 {
   "name": "lowtide",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "watchify app.js -o public/js/bundle.js -v",
-    "browserify": "browserify app.js | uglifyjs > public/js/bundle.js",
-    "build": "npm run browserify ",
-    "start": "npm run watch & nodemon server.js"
+    "watch": "webpack --progress --colors --watch",
+    "serve": "python -m SimpleHTTPServer 8888"
   },
   "author": "Adam Gibbons",
   "license": "ISC",
-  "devDependencies": {
-    "browserify": "^8.1.3",
-    "nodemon": "^1.3.6",
-    "reactify": "^1.0.0",
-    "uglify-js": "^2.4.16",
-    "watchify": "^2.3.0"
-  },
   "dependencies": {
-    "express": "^4.11.2",
-    "express-handlebars": "^1.1.0",
     "flux": "^2.0.1",
-    "jade": "^1.9.1",
-    "mongoose": "^3.8.22",
-    "node-jsx": "^0.12.4",
-    "ntwitter": "^0.5.0",
     "object-assign": "^2.0.0",
     "react": "^0.12.2",
-    "underscore": "^1.7.0"
+    "react-router": "^0.12.0"
   },
-  "browserify": {
-    "transform": [
-      "reactify"
-    ]
+  "devDependencies": {
+    "jsx-loader": "^0.12.2",
+    "webpack": "^1.5.3"
   }
 }
