--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "flux": "^2.0.1",
     "object-assign": "^2.0.0",
     "react": "^0.12.2",
-    "react-router": "^0.12.0"
+    "react-router": "^0.12.0",
+    "superagent": "^0.21.0",
+    "underscore": "^1.7.0"
   },
   "devDependencies": {
     "jsx-loader": "^0.12.2",
