--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^0.12.2",
     "react-router": "^0.12.0",
     "superagent": "^0.21.0",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "unix-timestamp": "^0.1.2"
   },
   "devDependencies": {
     "jsx-loader": "^0.12.2",
