--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "flux": "^2.0.1",
+    "moment": "^2.9.0",
     "object-assign": "^2.0.0",
     "react": "^0.12.2",
     "react-router": "^0.12.0",
     "superagent": "^0.21.0",
-    "underscore": "^1.7.0",
-    "unix-timestamp": "^0.1.2"
+    "underscore": "^1.7.0"
   },
   "devDependencies": {
     "jsx-loader": "^0.12.2",
